testsuite/poke.pkl/acons-diag-4.pk
/* { dg-do compile } */

var a
  = int[][] ([[1,2,3]]); /* { dg-error ".*\n.*" } */
